fix bug on mobile

--- a/assets/styles/components/footer.scss
+++ b/assets/styles/components/footer.scss
@@ -6,6 +6,7 @@ footer {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    height: fit-content;
 
     > div {
         display: grid;
